@@ -3,36 +3,40 @@ package com.project.hotel.service;
 import com.project.hotel.dto.request.ChatMessageRequest;
 import com.project.hotel.dto.response.ChatMessageResponse;
 import com.project.hotel.dto.response.ConversationResponse;
-import com.project.hotel.entity.ChatMessage;
-import com.project.hotel.entity.Hotel;
-import com.project.hotel.entity.User;
+import com.project.hotel.entity.*;
 import com.project.hotel.enums.MessageStatus;
 import com.project.hotel.enums.MessageType;
 import com.project.hotel.exception.AppException;
 import com.project.hotel.exception.ErrorCode;
 import com.project.hotel.mapper.ChatMessageMapper;
-import com.project.hotel.repository.ChatMessageRepository;
-import com.project.hotel.repository.HotelRepository;
-import com.project.hotel.repository.UserRepository;
-import jakarta.transaction.Transactional;
+import com.project.hotel.repository.*;
+import org.springframework.transaction.annotation.Transactional;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
+@Slf4j
 public class ChatService {
     UserRepository userRepository;
     HotelRepository hotelRepository;
     ChatMessageRepository chatMessageRepository;
     ChatMessageMapper chatMessageMapper;
+    RoomTypeRepository roomTypeRepository;
+    BookingRoomRepository bookingRoomRepository;
+    BookingServiceRepository bookingServiceRepository;
+
 
     @Transactional
     public ChatMessageResponse processAndSaveMessage(ChatMessageRequest request, String senderUsername) {
@@ -52,11 +56,11 @@ public class ChatService {
         User receiver = userRepository.findById(request.getReceiverId())
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
 
-        if (request.getHotelId() == null) {
-            throw new AppException(ErrorCode.HOTEL_NOT_FOUND);
+        Hotel hotel = null;
+        if (request.getHotelId() != null) {
+            hotel = hotelRepository.findById(request.getHotelId())
+                    .orElseThrow(() -> new AppException(ErrorCode.HOTEL_NOT_FOUND));
         }
-        Hotel hotel = hotelRepository.findById(request.getHotelId())
-                .orElseThrow(() -> new AppException(ErrorCode.HOTEL_NOT_FOUND));
 
         ChatMessage chatMessage = ChatMessage.builder()
                 .sender(sender)
@@ -72,25 +76,38 @@ public class ChatService {
         return chatMessageMapper.toChatMessageResponse(savedMessage);
     }
 
-    public List<ChatMessageResponse> getChatHistory(int recipientId) {
+    @Transactional
+    public List<ChatMessageResponse> getChatHistory(int recipientId, Integer hotelId) {
         String username = SecurityContextHolder.getContext().getAuthentication().getName();
         User currentUser = userRepository.findByUsername(username)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
 
-        List<ChatMessage> messages = chatMessageRepository.findChatHistory(currentUser.getId(), recipientId);
+        List<ChatMessage> messages;
+
+        if(hotelId != null) {
+            messages = chatMessageRepository.findChatHistoryWithHotel(currentUser.getId(), recipientId, hotelId);
+        } else {
+            messages = chatMessageRepository.findChatHistoryWithoutHotel(currentUser.getId(), recipientId);
+        }
+
         List<ChatMessage> unreadMessages = messages.stream()
                 .filter(m -> m.getReceiver().getId() == currentUser.getId() && m.getStatus() == MessageStatus.SENT)
-                .peek(m -> m.setStatus(MessageStatus.READ))
-                .toList();
+                .collect(Collectors.toList());
 
         if (!unreadMessages.isEmpty()) {
+            log.info("Marking {} messages as READ for user {}", unreadMessages.size(), username);
+            for (ChatMessage msg : unreadMessages) {
+                msg.setStatus(MessageStatus.READ);
+            }
             chatMessageRepository.saveAll(unreadMessages);
         }
+
         return messages.stream()
                 .map(chatMessageMapper::toChatMessageResponse)
                 .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public List<ConversationResponse> getConversations() {
         String username = SecurityContextHolder.getContext().getAuthentication().getName();
         User currentUser = userRepository.findByUsername(username)
@@ -105,20 +122,52 @@ public class ChatService {
                     currentUser.getId(),
                     MessageStatus.SENT
             );
+            Integer hotelId = null;
+            String hotelName = null;
+            if (msg.getHotel() != null) {
+                hotelId = msg.getHotel().getId();
+                hotelName = msg.getHotel().getName();
+            }
 
             return ConversationResponse.builder()
                     .conversationPartnerId(partner.getId())
-                    .conversationPartnerUsername(partner.getUsername())
                     .conversationPartnerName(partner.getFullName() != null ? partner.getFullName() : partner.getUsername())
+                    .conversationPartnerUsername(partner.getUsername())
                     .conversationPartnerAvatar(partner.getImagePath())
                     .lastMessage(msg.getMessage())
                     .lastMessageSender(isSender ? "me" : "other")
                     .timestamp(msg.getSentAt())
                     .unreadCount(unreadCount)
                     .lastMessageStatus(msg.getStatus().toString())
-                    .hotelId(msg.getHotel().getId())
-                    .hotelName(msg.getHotel().getName())
+                    .hotelId(hotelId)
+                    .hotelName(hotelName)
                     .build();
         }).collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public List<ConversationResponse> getConversationsForAdmin(String currentAdminUsername) {
+        List<User> users = userRepository.findByUsernameNot(currentAdminUsername);
+
+        return users.stream().map(user -> {
+            // TODO: Bổ sung logic lấy tin nhắn cuối cùng và unreadCount
+            return ConversationResponse.builder()
+                    .conversationPartnerId(user.getId())
+                    .conversationPartnerName(user.getFullName() != null ? user.getFullName() : user.getUsername())
+                    .conversationPartnerUsername(user.getUsername())
+                    .conversationPartnerAvatar(user.getImagePath())
+                    .lastMessage("...")
+                    .timestamp(LocalDateTime.now())
+                    .unreadCount(0)
+                    .hotelId(null)
+                    .build();
+        }).collect(Collectors.toList());
+    }
+
+    // (Hàm này có thể bị thiếu từ file BookingService, tôi thêm lại vào đây)
+    private String loadRoomTypeName(Room room) {
+        RoomType rt = roomTypeRepository.findById(room.getRoomType().getId())
+                .orElseThrow(() -> new AppException(ErrorCode.ROOM_TYPE_NOT_FOUND));
+        return rt.getName();
     }
 }
